--- a/Project 01/style.css
+++ b/Project 01/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .container {
-  background-color: #9fb3df;
+  background-color: #E4EFE7;
   border: 8px solid black;
   min-height: 100vh;
 }
